--- a/czxing/public-maven.gradle
+++ b/czxing/public-maven.gradle
@@ -30,7 +30,7 @@ def ossrhPassword = properties.getProperty("ossrh.password")
 
 def javadocName = properties.getProperty("javadoc.name")
 
-task androidSourcesJar(type: Jar) {
+tasks.register('androidSourcesJar', Jar) {
     classifier = 'sources'
     from android.sourceSets.main.java.source
 
