--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-//gradle lib config
-project.ext {
-    applicationId = "me.devilsen.czxing"
-    compileSdkVersion = 30
-    buildToolsVersion = "30.0.2"
-    ndkVersion = "22.1.7171670"
-    minSdkVersion = 21
-    targetSdkVersion = 30
-    abortOnLintError = false
-    checkLintRelease = false
-    abortOnLintError = false
-    javaVersion = "1.7"
-
-    appcompat = "androidx.appcompat:appcompat:1.2.0"
-    annotation = "androidx.annotation:annotation:1.1.0"
-    material = "com.google.android.material:material:1.2.1"
-
-    junit = "junit:junit:4.13.1"
-    testrunner = "androidx.test:runner:1.3.0"
-    testespresso = "androidx.test.espresso:espresso-core:3.3.0"
-}
-
-buildscript {
-    repositories {
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.aliyun.com/repository/central' }
-        jcenter()
-        mavenCentral()
-        google()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-//        classpath 'com.tencent.bugly:symtabfileuploader:2.2.1'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.10.2"
-    }
-}
-
-allprojects {
-    repositories {
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.aliyun.com/repository/central' }
-        jcenter()
-        mavenCentral()
-        google()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+plugins {
+    alias(libs.plugins.androidApplication) apply false
 }
