--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,23 +1,14 @@
-apply plugin: 'com.android.application'
-//apply plugin: 'bugly'
-//apply from: "../config.gradle"
-
-// 如初次运行，请把此处注释掉
-//bugly {
-//    debug = true
-//    appId = buglyAppId
-//    appKey = buglyAppKey
-//}
+plugins {
+    alias(libs.plugins.androidApplication)
+}
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdk 34
 
     defaultConfig {
-        applicationId rootProject.ext.applicationId
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        ndkVersion rootProject.ext.ndkVersion
+        applicationId "me.devilsen.czxing"
+        minSdkVersion 21
+        compileSdk 34
         versionCode 2
         versionName "1.0.1"
 
@@ -25,15 +16,8 @@ android {
 
         externalNativeBuild {
             cmake {
-//                abiFilters "armeabi-v7a"
                 abiFilters "armeabi-v7a","arm64-v8a"
             }
-        }
-
-        ndk {
-            // 设置支持的SO库架构
-//            abiFilters "armeabi-v7a"
-            abiFilters "armeabi-v7a","arm64-v8a"
         }
     }
 
@@ -51,8 +35,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = rootProject.ext.javaVersion
-        targetCompatibility = rootProject.ext.javaVersion
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
     namespace 'me.sam.czxing'
 
@@ -60,23 +44,23 @@ android {
 
 dependencies {
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+    debugImplementation libs.com.squareup.leakcanary.leakcanary.android
     implementation project(':czxing')
 //    implementation 'io.github.devilsen:czxing:1.2.0'
 
-    testImplementation rootProject.ext.junit
-    androidTestImplementation rootProject.ext.testrunner
-    androidTestImplementation rootProject.ext.testespresso
+    testImplementation libs.junit
+    androidTestImplementation libs.testrunner
+    androidTestImplementation libs.espresso.core
 
-    implementation rootProject.ext.appcompat
-    implementation rootProject.ext.material
+    implementation libs.appcompat
+    implementation libs.material
     // permission
-    implementation 'com.yanzhenjie:permission:2.0.3'
+    implementation libs.permission
     // bugly
-    implementation 'com.tencent.bugly:crashreport:3.1.0'
-    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
+    implementation libs.crashreport
+    implementation libs.nativecrashreport
     // rxJava
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation libs.rxandroid
+    implementation libs.rxjava
 
 }
